# tinkerbell

./: .gitignore  README.md  blocks.py  main.py  pyproject.toml  simple_linear_regression.py  test.ipynb
.github/workflows/: pypi-publish.yml
blocks/: blocks.py  functions.py  layers.py
src/tinkerbell/: functions.py  layers.py  loss.py  models.py  optimizer.py  tensor.py
src/tinkerbell/legacy/: core.py  functions.py  layers.py  models.py  optimizer.py
