[project]
name = "tinkerbell"
version = "0.2.0"
authors=[
    {name="Aaiswarya Mishra",email="aaishwarymishra@gmail.com"}
]
description = "Tinkerbell is a lightweight, educational deep learning framework built entirely from scratch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
where = ["src"]

